testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag8.errors.txt
/a.js(1,15): error TS2315: Type 'Object' is not generic.


==== /a.js (1 errors) ====
    /** @typedef {Object.<string, boolean>} Facts */
                  ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
    
    // Should be able to detect a failure here
    const x = /** @satisfies {Facts} */ ({
        m: true,
        s: "false"
    })
    